--- a/guess.html
+++ b/guess.html
@@ -5,11 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    
 </head>
 <body>
-    
 
-<script src="guess.js"></script>
+
+<div class="bg-white">
+    <div class="max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:py-16 lg:px-8">
+      <div class="px-6 py-6 bg-indigo-700 rounded-lg md:py-12 md:px-12 lg:py-16 lg:px-16 xl:flex xl:items-center">
+        <div class="xl:w-0 xl:flex-1">
+          <h2 class="text-2xl font-extrabold tracking-tight text-white sm:text-3xl">Ready to play mafucka</h2>
+          <p class="mt-3 max-w-3xl text-lg leading-6 text-indigo-200">le jeu est simple, choisis un numéro entre 0 et 100, tu as 3 chance pas plus</p>
+        </div>
+        <div class="mt-8 sm:w-full sm:max-w-md xl:mt-0 xl:ml-8">
+          <!-- <form class="sm:flex">
+            <label for="email-address" class="sr-only">un numéro entre 0 et 100</label>
+            <input id="email-address" name="email-address" type="email" autocomplete="email" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="un numéro entre 0 et 100">
+            <button type="submit" id="jouer" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent shadow text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0">jouer</button>
+          </form> -->
+
+          <button class="but">Button test</button>
+
+          <p class="mt-3 text-sm text-indigo-200">
+            Il te reste x chance et tes dernier numéro sont X - X - X
+           <p class="text-red-600 font-medium"> BRAVOOOO TU AS GAGNER !!! EST CE QUE TU VEUX REJOUER</p>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+<!-- <script src="guess.js"></script> -->
+<script src="getData.js"></script>
 
 </body>
 </html>
