--- a/guess.html
+++ b/guess.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="popup.css">
     <script src="https://cdn.tailwindcss.com"></script>
     
 </head>
@@ -17,6 +18,7 @@
         <div class="xl:w-0 xl:flex-1">
           <h2 class="text-2xl font-extrabold tracking-tight text-white sm:text-3xl">Ready to play mafucka</h2>
           <p class="mt-3 max-w-3xl text-lg leading-6 text-indigo-200">le jeu est simple, choisis un numéro entre 0 et 100, tu as 3 chance pas plus</p>
+          <p class="text-yellow-600 font-medium" id="chanceRestante">TU AS 3 CHANCES</p>
         </div>
         <div class="mt-8 sm:w-full sm:max-w-md xl:mt-0 xl:ml-8">
           <form class="sm:flex" id="form">
@@ -30,8 +32,18 @@
            <p class="text-red-600 font-medium" id="messageFin">VAS Y TENTE TA CHANCE COPAIN :)</p>
           </p>
         </div>
+
       </div>
     </div>
+  </div>
+
+  <div class="form-popup" id="popup">
+    <form action="" class="form-container">
+      <h2>T'es un badass de ouf</h2>
+      <br>
+      <button type="submit" class="btn" onclick="nouvellePartie()">Rejouer</button>
+      <button type="submit" id="partirBtn" class="btn cancel" onclick="theEnd()">Partir</button>
+    </form>
   </div>
   
 
