--- a/guess.html
+++ b/guess.html
@@ -38,16 +38,13 @@
   </div>
 
   <div class="form-popup" id="popup">
-    <form action="" class="form-container">
       <h2>T'es un badass de ouf</h2>
       <br>
-      <button type="submit" class="btn" onclick="nouvellePartie()">Rejouer</button>
-      <button type="submit" id="partirBtn" class="btn cancel" onclick="theEnd()">Partir</button>
-    </form>
+      <button type="button" id="rejouerButton" class="btn">Rejouer</button>
+      <button type="button" id="partirBtn" class="btn cancel">Partir</button>
   </div>
   
 
-<!-- <script src="guess.js"></script> -->
 <script src="getData.js"></script>
 
 </body>
